# CPX

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  circle.yml
include/cpx/: AbstractLibraryLoader.hpp  AbstractProducer.hpp  Exception.hpp  LibraryLoader.hpp  LinuxLibraryLoader.hpp  PluginFactory.hpp  PluginProducer.hpp  Version.hpp  WindowsLibraryLoader.hpp  shared.h
src/: LibraryLoader.cpp  LinuxLibraryLoader.cpp  PluginFactory.cpp  WindowsLibraryLoader.cpp
test/: CMakeLists.txt  TestPlugin.cpp  TestPluginCopy.cpp  TestPluginInterface.hpp  TestPluginOther.cpp  minitest.h  test.cpp
